# alta

./: .editorconfig  .gitignore  .gitmodules  .lldbinit  CHANGELOG.md  CLI-CHANGELOG.md  CMakeLists.txt  Cargo.toml  FAQ.md  LICENSE  README.md  azure-pipelines.yml
CMake/: cpack-config.cmake  cpack-config.cmake.in  uninstall.cmake.in  version.cmake
CMake/CPack/Resources/: Boost--Filesystem.LICENSE.txt  Doc.README.md  LICENSE.txt  Licenses.README.md  README.installer.txt  README.txt  WiX.patch.xml  changelog.rpm.txt  copyright  extra-dialog.wxs  mondo.wxs  org.alta.alta.metainfo.xml
bs/: package.alta.yaml
bs/docs/: langauge-spec.md
bs/examples/: hello.alta
bs/lib/: lexer.alta  parser.alta  serialization.alta  util.alta
bs/lib/ast/: accessor.alta  attribute.alta  block.alta  expression-statement.alta  expression.alta  for-loop.alta  function-definition.alta  import.alta  integer-literal.alta  main.alta  node.alta  parameter.alta  range-expression.alta  return-directive.alta  root-node.alta  root-statement.alta  statement.alta  string-literal.alta  structure-expression.alta  type.alta
bs/stdlib/math/: main.alta  package.alta.yaml
bs/stdlib/memory/: main.alta  package.alta.yaml
bs/stdlib/prefix/: README.md  package.alta.yaml
bs/stdlib/safety/: main.alta  package.alta.yaml
bs/stdlib/string/: main.alta  package.alta.yaml
bs/stdlib/types/: main.alta
docs/: README.md  brainstorming.md  editor-integration.md  getting-started.md
docs/language-reference/: README.md  attributes.md  functions.md  imports-and-exports.md  packages-and-modules.md  scopes.md  types.md
docs/stdlib/: README.md  exceptions.md  io.md  libc.md  list.md  map.md  math.md  memory.md  meta.md  process.md  queue.md  stack.md  string.md  types.md  unicode.md  util.md  vector.md
examples/: .gdb_history  basic-coroutine.alta  coroutine-test.alta  fibonacci.alta  generator-test.alta  hello-world.alta  http-client.alta  http-server.alta  inheritance.alta  lambda.alta  package.alta.yaml  read-file.alta  simple-class.alta  tcp-client.alta  tcp-server.alta  var-params.alta
include/: cli-parser.hpp  cli.hpp  printers.hpp  version.hpp
include/altac/: cli-parser.hpp  cli.hpp  printers.hpp
include/altall/: altall.hpp  compiler.hpp  mangle.hpp  util.hpp
runtime/: common.h  definitions.h  runtime.c
src/: alta.pest  ast.rs  main.cpp  main.rs  package.rs  parser.pest  parser.rs  printers.cpp  util.rs  workqueue.rs
src/altac/: cli-parser.cpp  main.cpp  printers.cpp
src/altall/: altall.cpp  compiler.cpp  mangle.cpp  util.cpp
src/amake/: amake.alta  package.alta.yaml
src/ast/: generics.rs  global_statement.rs  import_statement.rs  mod.rs  node.rs  root_node.rs  struct_definition_statement.rs
stdlib/_internal/: README.md  main.alta  package.alta.yaml
stdlib/_internal/lib/: result.alta  runtime.alta
stdlib/_internal/lib/coroutines/: main.alta
stdlib/_internal/lib/coroutines/arch/: posix.alta  windows.alta
stdlib/alta/: main.alta  package.alta.yaml
stdlib/alta/lib/: coroutines.alta
stdlib/dns/: main.alta  package.alta.yaml
stdlib/dns/arch/: posix.alta
stdlib/dns/arch/posix/: declarations.alta  main.alta
stdlib/exceptions/: main.alta  package.alta.yaml
stdlib/fs/: main.alta  package.alta.yaml
stdlib/http/: main.alta  package.alta.yaml
stdlib/io/: main.alta
stdlib/ip/: README.md  main.alta  package.alta.yaml
stdlib/ip/docs/: README.md
stdlib/ip/examples/: parse.alta
stdlib/libc/: main.alta  package.alta.yaml
stdlib/libc/lib/: assert.alta  ctype.alta  errno.alta  float.alta  inttypes.alta  limits.alta  locale.alta  math.alta  setjmp.alta  signal.alta  stdarg.alta  stddef.alta  stdint.alta  stdio.alta  stdlib.alta  string.alta  time.alta  wchar.alta
stdlib/list/: main.alta  package.alta.yaml
stdlib/map/: main.alta  package.alta.yaml
stdlib/math/: main.alta  package.alta.yaml
stdlib/math/lib/: integer.alta  integer.old.alta  misc.alta
stdlib/memory/: main.alta  package.alta.yaml
stdlib/meta/: README.md  main.alta  package.alta.yaml
stdlib/meta/lib/runtime/: errors.alta  main.alta  native.alta  stack.alta  tables.alta
stdlib/meta/lib/runtime/objects/: classes.alta  lambdas.alta  main.alta  objects.alta  optionals.alta  unions.alta  wrappers.alta
stdlib/net/: main.alta  package.alta.yaml
stdlib/net/arch/: posix.alta
stdlib/net/arch/posix/: declarations.alta  main.alta
stdlib/posix/: decl.alta  main.alta  package.alta.yaml
stdlib/posix/decl/: errno.alta  fcntl.alta  netdb.alta  poll.alta  unistd.alta
stdlib/posix/decl/arpa/: inet.alta
stdlib/posix/decl/netinet/: in.alta
stdlib/posix/decl/sys/: ioctl.alta  socket.alta  types.alta  uio.alta
stdlib/process/: main.alta  package.alta.yaml
stdlib/process/arch/: bsd.alta  linux.alta  posix.alta  windows.alta
stdlib/queue/: main.alta  package.alta.yaml
stdlib/stack/: main.alta  package.alta.yaml
stdlib/string/: main.alta  package.alta.yaml
stdlib/types/: main.alta  package.alta.yaml
stdlib/unicode/: main.alta  package.alta.yaml
stdlib/uri/: LICENSE  README.md  main.alta  package.alta.yaml
stdlib/uri/docs/: README.md
stdlib/uri/examples/: parse.alta
stdlib/util/: main.alta  package.alta.yaml
stdlib/util/lib/: bucket-list.alta  byteswap.alta  numbers.alta  pair.alta  range.alta  weak-array.alta
stdlib/vector/: main.alta  package.alta.yaml
stl/io/: main.alta  package.alta.yaml
stl/string/: main.alta
